# goulash-lang

./: Cargo.toml  LICENSE-APACHE  README.md  file.gls
src/: error.rs  lib.rs  main.rs  span.rs  std.gls  types.rs  value.rs
src/ast/: expr.rs  mod.rs  ops.rs  stmt.rs
src/ast/visitor/: expr.rs  mod.rs  stmt.rs
src/iir/: expr.rs  mod.rs  stmt.rs
src/iir/visitor/: expr.rs  stmt.rs
src/int_ir/: builder.rs  expr.rs  mod.rs  stmt.rs
src/int_ir/visitor/: expr.rs  mod.rs  stmt.rs
src/interpreter/: mod.rs  scopes.rs
src/lexer/: lexer.rs  token.rs
src/parser/: expr.rs  mod.rs  parser.pest  parser.rs  stmt.rs
