[package]
name = "goulash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concat-idents = "1.1.4"
internment = { version = "0.7.0", features = ["arc"] }
lazy_static = "1.4.0"
pest = "2.6.0"
pest_derive = "2.6.0"
